--- a/Jcode/templates/layout/base.html
+++ b/Jcode/templates/layout/base.html
@@ -52,11 +52,15 @@
               </li>{% endfor %}
             </ul>
           </div>
-
+        <form method="post" action="{% url 'app:search' %}" >
+          {% csrf_token %}
         <div class="navbar-search">
           <i class="fa fa-search"></i>
-        <input type="text" class="form-control" placeholder="ค้นหาคอร์สเรียน">
+        <input type="text" name="txtSearch" class="form-control" placeholder="ค้นหาคอร์สเรียน">
+        <input type="submit" style="display:none" />
       </div>
+    </form>
+    <input class="form-control basicAutoComplete" type="text" autocomplete="off">
     </div>
         <ul class="navbar-nav ms-auto mb-2 mb-md-0">
           <li class="nav-item mx-2">
@@ -78,12 +82,7 @@
         <a class="btn btn-primary btn-basesign" href="{% url 'app:login' %}">เข้าสู่ระบบ</a>
         {% endif %}
         {% if user.is_authenticated %}
-    <!--
-        <form>
-          <label for="search">Search for a product:</label>
-          <input type="text" id="search" name="search">
-        </form>
-      -->
+
 
         <div class="dropdown">
           <button class="btn btn-primary btn-profile dropdown mx-2" type="button" id="dropdownMenuButton"
@@ -101,10 +100,10 @@
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li>
-              <a  class="dropdown-item mt-2" href="{% url 'app:profile' %}">ตั้งค่าโปรไฟล์</a>
+                <a type="submit" class="dropdown-item mt-2" href="{% url 'video:management_course' %}">จัดการคอร์ส</a>
             </li>
             <li>
-                <a type="submit" class="dropdown-item mt-2" href="{% url 'video:management_course' %}">จัดการคอร์ส</a>
+              <a  class="dropdown-item mt-2" href="{% url 'app:profile' %}">ตั้งค่าโปรไฟล์</a>
             </li>
             <li>
                 <form method="post" action="{% url 'app:logout' %}" novalidate>
@@ -118,7 +117,9 @@
 
 
         {% endif %}
+
       </div>
+
     </div>
   </nav>
 
@@ -127,9 +128,11 @@
     {% block content %}{% endblock %}
   </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
 <script>
   $(function(){
     $('.btn-play').on('click',function(){
@@ -155,5 +158,11 @@
 </script>
 {% endfor %}
 {% endif %}
-
+<script>
+$('.basicAutoComplete').autoComplete({
+    resolverSettings: {
+        url:'/static/test-list.json'
+    }
+});
+</script>
 </html>
