--- a/Jcode/templates/video/course/add_course.html
+++ b/Jcode/templates/video/course/add_course.html
@@ -8,7 +8,7 @@
             <h3 style="text-align: center;"><b>เพิ่มวิดีโอ</b></h3>
             <form method="post" enctype="multipart/form-data" novalidate>
                 {% csrf_token %}
-                {{ form }}
+                {{ form.as_p }}
                 <button type="submit" class="btn btn-success">บันทึก</button>
             </form>
         </div>
