--- a/Jcode/templates/video/course/course.html
+++ b/Jcode/templates/video/course/course.html
@@ -10,7 +10,7 @@
             <div style="text-align: center;">
               <a class="btn btn-createcourse mt-2" href="{% url 'video:video_add'  %}">เพิ่มคอร์สเรียน</a>
             </div>
-           <table class="manage_course my-4">
+           <table class="table-colored my-4">
             <tr>
               <th>คอร์ส</th>
               <th>บทเรียน</th>
