--- a/Jcode/templates/video/lesson/lesson.html
+++ b/Jcode/templates/video/lesson/lesson.html
@@ -12,7 +12,7 @@
           <div style="text-align: center;">
             <a class="btn btn-addlesson mt-2" href="{% url 'video:video_addlesson' %}?courseid={{courseid}}&chapterid={{chapterid}}">เพิ่มบทเรียน</a>
           </div>
-          <table class="my-4">
+          <table class="table-colored my-4">
             <tr>
               <th>หัวข้อหลัก</th>
               <th>บทเรียน</th>
