--- a/Jcode/static/css/style.css
+++ b/Jcode/static/css/style.css
@@ -109,17 +109,40 @@ h2{
 span {
   color: rgb(60, 60, 60)
 }
-
 .subnav{
-  padding: 40px 0;
-  background-color: #333;
-  color: #fff;
+  padding: 50px 0;
+  background-color: #5179DC;;
+  border-radius: 15px;
+  color: #FFF;
   margin-bottom: 40px;
 }
-
-
 .subnav .pricetag{
   float:right;
+}
+.btn-purchase{
+  background-color: #5179DC;
+  color: #FFF;
+}
+.btn-purchase:hover{
+  background-color: #3560ce;
+  color: #FFF;
+}
+.description_member{
+  color: #949494;
+  font-size: 14px;
+}
+.description_video{
+  color: #949494;
+  font-size: 14px;
+}
+.name_member{
+  color: #5178dc;
+}
+.about_member{
+  display: auto;
+  background-color: #ececec;
+  border-radius: 15px;
+  margin-bottom: 40px;
 }
 .video{
   position: relative;
@@ -199,38 +222,38 @@ span {
   height: auto;
   padding: 2px;
 }
-table {
+/* #table{
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  background-color: #5179DC;
+  color: #FFF;
+} */
+table.table-colored {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
   background-color: #5179DC;
   color: #FFF;
 }
-table .manage_course {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-  background-color: #5179DC;
-  color: #FFF;
-}
-th {
+table.table-colored th {
   border: 1px solid #000000;
   background-color: #5179DC;
   text-align: center;
   padding: 8px;
   color: #FFF;
 }
-td {
+table.table-colored td {
   border: 1px solid #000000;
   text-align: center;
   padding: 8px;
   color: rgb(0, 0, 0);
 }
-tr:nth-child(even) {
+table.table-colored tr:nth-child(even) {
   background-color: #E5EDFF;
   color: #000;
 }
-tr:nth-child(odd) {
+table.table-colored tr:nth-child(odd) {
   background-color: #F4F7FF;
   color: #000;
 }
@@ -280,7 +303,7 @@ h6{
   font-size: 19px;
 }
 .Banner{
-  border-radius: 30px;
+  border-radius: 20px;
   width: 100%;
   height: 320px;
 }
@@ -318,4 +341,22 @@ h6{
   border-radius: 50%;
   border: 5px solid #D6E1F9;
 
+}
+#profile_form p label{
+  background-color: #32b823;
+  color: #FFF;
+}
+.table-form tr th{
+  padding: 15px;
+}
+.table-form tr td{
+  padding: 15px;
+}
+.btn-save{
+  background-color: #5178dc;
+  color: #FFF;
+}
+.btn-save:hover{
+  background-color: #3c68d9;
+  color: #FFF;
 }
