--- a/Jcode/templates/video/course/add_course.html
+++ b/Jcode/templates/video/course/add_course.html
@@ -3,14 +3,18 @@
 
 {% block content %}
 <div class="container">
+    <h6 style="float: left;"><i class="fa fa-chevron-left"></i><a href="{% url 'video:management_course' %}"> ย้อนกลับ</a></h6>
     <div class="row">
         <div class="col-lg-8 offset-lg-2">
-            <h3 style="text-align: center;"><b>เพิ่มวิดีโอ</b></h3>
-            <form method="post" enctype="multipart/form-data" novalidate>
+
+            <h3 style="text-align: center;"><b>เพิ่มคอร์สเรียน</b></h3>
+            <div class="formaddcourse">
+            <form method="post" enctype="multipart/form-data" novalidate style="text-align: center;">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit" class="btn btn-success">บันทึก</button>
+                <button type="submit" class="btn btn-save">บันทึก</button>
             </form>
+        </div>
         </div>
     </div>
 </div>
