--- a/Jcode/templates/video/detail.html
+++ b/Jcode/templates/video/detail.html
@@ -4,7 +4,7 @@
   <div class="subnav">
     <div class="container">
       <div class="float-end mt-2">
-        <h2>฿{{ video.price }}</h2>
+        <h1>{{ video.price }} ฿</h1>
       </div>
       <h1>{{ video.name }}</h1>
       <a href="{% url 'video:index' %}"class='text-white'><i class="fa fa-chevron-left"></i>ย้อนกลับ</a>
@@ -16,7 +16,7 @@
         <div class=" mb-4">
           {% if video.videoexample %}
         <video id="videoplayer" controls width="550" height="400">
-          <source src="http://192.168.1.5:5000{{video.videoexample.url}}" type="video/mp4" >
+          <source src="http://192.168.1.6:5000{{video.videoexample.url}}" type="video/mp4" >
           Your browser does not support HTML5 video.
         </video>
         {% endif %}
@@ -48,7 +48,7 @@
                               <td><i class="far fa-clock"></i> {{ lesson.duration_time }}</td>
                               {% if lesson.lessonvideo %}
                               {% if lesson.is_locked == False %}
-                                <td><button videourl='http://192.168.1.5:5000{{lesson.lessonvideo.url}}' class="btn-play"><i class="far fa-circle-play"></i>videoplay</button></td>
+                                <td><button videourl='http://192.168.1.6:5000{{lesson.lessonvideo.url}}' class="btn-play"><i class="far fa-circle-play"></i>เล่นวิดีโอ</button></td>
                               {% elif lesson.is_locked == True %}
                                 <td><i class="fa fa-lock"></i></td>
                               {% endif %}
@@ -67,21 +67,25 @@
 
       </div>
       <div class="col-lg-4">
-        <a href="#" class="btn btn-success btn-lg py-3 w-100">Enroll</a>
+        <a href="#" class="btn btn-purchase btn-lg py-3 w-100">ซื้อคอร์ส</a>
         <div class="my-5">
-          <h4>รายละเอียด</h4>
-          {{ video.description }}
+          <h4><b>รายละเอียด</b></h4>
+          <div class="description_video"> {{ video.description }} </div>
         </div>
-        <div class="my-5">
-          <h4>เกี่ยวกับผู้สอน</h4>
-          <div class="profile">
-            <img src="{{video.member.Profile_image.url}}" style="width: 100px; border-radius: 50%;" alt="">
-            <div class="mt-3 ">{{video.member.user.first_name}} {{video.member.user.last_name}} ( {{video.member.user_code}} )</div>
-            <div class="mt2 ">{{video.member.description}}</div>
+
+        <div class="about_member">
+        <div class="my-3" style="text-align: center;">
+          <h4><b>เกี่ยวกับผู้สอน</b></h4>
+          <div class="my-3" style="text-align: center;">
+            <img src="{{video.member.Profile_image.url}}" style="width: 100px; border-radius: 50%; left: 50%;" alt=""></div>
+          <div class="profile my-4">
+            <div class="mt-3" style="text-align: center;"><h6><b>{{video.member.user.first_name}} {{video.member.user.last_name}} ( {{video.member.user_code}} )</b></h6></div>
+            <div class="description_member mt2 ">{{video.member.description}}</div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
+    </div>
+  </div>
 {% endblock %}
