--- a/Jcode/templates/video/index.html
+++ b/Jcode/templates/video/index.html
@@ -1,6 +1,7 @@
 {% extends "layout/base.html" %}
 
 {% load static %}
+{% load humanize %}
 
 {% block title %} Video Page {% endblock %}
 
@@ -58,7 +59,7 @@
         </div>
 
         <div class="card-footer border-0 bg-transparent">
-          <h5>฿ {{b.price}}  </h5>
+          <h5>฿ {{b.price|floatformat:0|intcomma}}  </h5>
         </div>
 
         </div>
@@ -118,7 +119,7 @@
         </div>
 
         <div class="card-footer border-0 bg-transparent">
-          <h5>฿ {{b.price}} {{b.member}} {{c.user_code}}</h5>
+          <h5>฿ {{b.price|floatformat:0|intcomma}} {{b.member}} {{c.user_code}}</h5>
         </div>
         </div>
       </div>
