--- a/Jcode/static/css/style.css
+++ b/Jcode/static/css/style.css
@@ -1,7 +1,8 @@
 body{
   font-size: 15px;
   background-color: rgb(255, 255, 255);
-  font-family: 'Kanit', sans-serif;
+  font-weight: 300;
+  font-family: 'Bai jamjuree', sans-serif;
 }
 h2{
   text-align: center;
@@ -15,6 +16,8 @@ h2{
 }
 .navbar-search{
   position: relative;
+  margin: 2px 0;
+  cursor: pointer;
 }
 .navbar-search .fa{
   position: absolute;
@@ -25,8 +28,10 @@ h2{
 .navbar-search .form-control{
   padding-left:35px ;
   font-weight: 300;
+  font-size: 14px;
   border-radius: 20px;
 }
+
 .card-course{
   transition: all 0.2s ease-in-out;
 }
@@ -97,15 +102,19 @@ h2{
   transition: all 0.2s ease-in-out;
 }
 .btn-category {
-  color: rgb(255, 255, 255);
-  background-color: #5179DC;
-
+  /* color: rgb(255, 255, 255);
+  background-color: #5179DC; */
+  margin: 2px 0;
+  font-size: 14px;
+  color: #5179DC;
+  border-color: #5179DC;
 }
 .btn-category:hover {
   color: rgb(255, 255, 255);
   background-color: #3c68d9;
   transition: all 0.3s ease-in-out;
 }
+
 span {
   color: rgb(60, 60, 60)
 }
@@ -119,6 +128,19 @@ span {
 .subnav .pricetag{
   float:right;
 }
+
+/**/
+.subnav_new{
+  padding: 50px 0;
+  background-color: #5179DC;;
+  color: #FFF;
+  margin-top: -50px;
+  margin-bottom: 80px;
+}
+.subnav_new .pricetag{
+  float:right;
+}
+
 .btn-purchase{
   background-color: #5179DC;
   color: #FFF;
@@ -140,7 +162,7 @@ span {
 }
 .about_member{
   display: auto;
-  background-color: #ececec;
+  background-color: #eeeeee;
   border-radius: 15px;
   margin-bottom: 40px;
 }
@@ -346,6 +368,11 @@ h6{
   background-color: #32b823;
   color: #FFF;
 }
+.table-form{
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 .table-form tr th{
   padding: 15px;
 }
@@ -358,5 +385,9 @@ h6{
 }
 .btn-save:hover{
   background-color: #3c68d9;
+  color: #FFF;
+}
+#add_form p label{
+  background-color: #32b823;
   color: #FFF;
 }
