--- a/Jcode/static/css/stylelogin.css
+++ b/Jcode/static/css/stylelogin.css
@@ -1,7 +1,7 @@
 body{
   font-size: 15px;
   background-color: #D6E1F9;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Bai jamjuree', sans-serif;
 }
 .navbar-nav .nav-item .nav-link{
   color: #5179DC;
