--- a/Jcode/templates/account/profile.html
+++ b/Jcode/templates/account/profile.html
@@ -9,15 +9,15 @@
             <div class="mt-3">
               <div class="card shadow-sm mb-5">
                 <div class="card-body">
-                  <h3 class ='mt-4' style="text-align: center;"><b>จัดการโปรไฟล์</b></h3>
-                  <div class="manageprofile_img mb-4" style="text-align: center;" >
+                  <h3 class ='mt-4 mb-4' style="text-align: center;"><b>จัดการโปรไฟล์</b></h3>
+                  <div class="manageprofile_img mb-3" style="text-align: center;" >
                     {% if member_list.Profile_image %}
                     <img src="{{member_list.Profile_image.url}}" alt="" >
                     {% endif %}
                 </div>
-                  <form id ='profile_form' method="post" enctype="multipart/form-data" novalidate >
+                  <form id ='profile_form' method="post" enctype="multipart/form-data" novalidate>
                     {% csrf_token %}
-                    <table class="table-form">
+                    <table class="table-form" >
                       {{ form.as_table }}
                       <tr>
                         <th>
