--- a/Jcode/templates/layout/base.html
+++ b/Jcode/templates/layout/base.html
@@ -9,7 +9,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.min.css" rel="stylesheet">
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -28,7 +28,7 @@
         <div class="d-flex">
 
           <div class="dropdown">
-            <button class="btn btn-primary btn-category dropdown-toggle mx-2" type="button" id="dropdownMenuButton"
+            <button class="btn btn-outline-primary btn-category dropdown-toggle mx-2" type="button" id="dropdownMenuButton"
               data-toggle="dropdown" aria-expanded="false">
               <i class="fa fa-bars"></i> ประเภท
             </button>
@@ -54,7 +54,7 @@
           </div>
         <form method="post" action="{% url 'app:search' %}" >
           {% csrf_token %}
-        <div class="navbar-search">
+        <div class="navbar-search ms-1">
           <i class="fa fa-search"></i>
         <input type="text" name="txtSearch" class="advanced2AutoCompleteInput form-control" placeholder="ค้นหาคอร์สเรียน" autocomplete="off">
         <input type="submit" style="display:none" />
@@ -123,13 +123,13 @@
     </div>
   </nav>
 
+  {% block subnav %}{% endblock %}
   <div class="container-fluid">
-
     {% block content %}{% endblock %}
   </div>
 </body>
 <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
