--- a/Jcode/templates/video/course/add_course.html
+++ b/Jcode/templates/video/course/add_course.html
@@ -6,16 +6,20 @@
     <h6 style="float: left;"><i class="fa fa-chevron-left"></i><a href="{% url 'video:management_course' %}"> ย้อนกลับ</a></h6>
     <div class="row">
         <div class="col-lg-8 offset-lg-2">
-
+            <div class="card shadow-sm mb-5">
+                <div class="card-body">
             <h3 style="text-align: center;"><b>เพิ่มคอร์สเรียน</b></h3>
             <div class="formaddcourse">
-            <form method="post" enctype="multipart/form-data" novalidate style="text-align: center;">
+            <form id ='add_form' method="post" enctype="multipart/form-data" novalidate style="text-align: center;">
                 {% csrf_token %}
-                {{ form.as_p }}
+                <table class="table-form">
+                    {{ form.as_table }}
+                </table>
                 <button type="submit" class="btn btn-save">บันทึก</button>
             </form>
-        </div>
-        </div>
+            </div>
+                </div>
+            </div>
     </div>
 </div>
 {% endblock %}
