--- a/Jcode/templates/video/lesson/add_lesson.html
+++ b/Jcode/templates/video/lesson/add_lesson.html
@@ -6,12 +6,18 @@
     <h6 style="float: left;"><i class="fa fa-chevron-left"></i><a href="{% url 'video:management_chapter' %}?courseid={{courseid}}"> ย้อนกลับ</a></h6>
     <div class="row">
         <div class="col-lg-8 offset-lg-2">
+            <div class="card shadow-sm mb-5">
+                <div class="card-body">
             <h3 style="text-align: center;"><b>เพิ่มบทเรียน</b></h3>
-            <form method="post" enctype="multipart/form-data" novalidate action="?courseid={{courseid}}&chapterid={{chapterid}}" style="text-align: center;">
+            <form id ='add_form' method="post" enctype="multipart/form-data" novalidate action="?courseid={{courseid}}&chapterid={{chapterid}}" style="text-align: center;">
                 {% csrf_token %}
-                {{ form.as_p }}
+                <table class="table-form">
+                {{ form.as_table }}
+                </table>
                 <button type="submit" class="btn btn-save">บันทึก</button>
             </form>
+        </div>
+        </div>
         </div>
     </div>
 </div>
