--- a/Jcode/templates/video/lesson/update_lesson.html
+++ b/Jcode/templates/video/lesson/update_lesson.html
@@ -2,15 +2,20 @@
 
 {% block content %}
 
-
+<div class="card shadow-sm mb-5">
+<div class="card-body">
 <h3 style="text-align: center;"><b>แก้ไข Lesson</b></h3>
-<form method="post" enctype="multipart/form-data" action="?courseid={{courseid}}&chapterid={{chapterid}}">
+<form id ='add_form' method="post" enctype="multipart/form-data" action="?courseid={{courseid}}&chapterid={{chapterid}}">
     {% csrf_token %}
     <div style="text-align: center;">
-    {{ form.as_p }}
+    <table class="table-form">
+        {{ form.as_table }}
+    </table>
   </div>
   <div style="text-align: center;">
     <input type="submit" class="btn btn btn-update mx-2" value="Update">
   </div>
+</div>
+</div>
 </form>
 {% endblock %}
